# zip

./: README.md  vo.ext.toml  vo.mod  zip.vo  zip.wasm
.github/workflows/: module-ci.yml
rust/: Cargo.toml
rust/src/: lib.rs
tests/: main.vo
